add new website from server na

--- a/xem-phim-bo/rong-di-tim-nha/index.html
+++ b/xem-phim-bo/rong-di-tim-nha/index.html
@@ -1186,7 +1186,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1666,40 +1666,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tai-but-anh-yeu-em" title="Tái bút: Anh yêu em">
+          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-cua-tu-duy" title="Hành Trình Của Tư Duy">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tai-but-anh-yeu-em-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-cua-tu-duy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tái bút: Anh yêu em
+             Hành Trình Của Tư Duy
             </span>
             <span class="list-top-movie-item-en">
-             P.S. I Love You
-            </span>
-            <span class="list-top-movie-item-view">
-             6 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/air-doll" title="Air Doll">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/air-doll-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Air Doll
-            </span>
-            <span class="list-top-movie-item-en">
-             Air Doll
+             Hành Trình Của Tư Duy
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1710,18 +1688,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/du-chan-everest-va-vu-dong-dat-tai-nepal" title="Dư chấn: Everest và vụ động đất tại Nepal">
+          <a class="list-top-movie-link" href="/phim-moi/dai-chien-thong-gia" title="Đại chiến thông gia">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/du-chan-everest-va-vu-dong-dat-tai-nepal-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-chien-thong-gia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dư chấn: Everest và vụ động đất tại Nepal
+             Đại chiến thông gia
             </span>
             <span class="list-top-movie-item-en">
-             Aftershock: Everest and the Nepal Earthquake
+             Jumping the Broom
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chon-con-tim-hay-nghe-ly-tri" title="Chọn Con Tim Hay Nghe Lý Trí">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chon-con-tim-hay-nghe-ly-tri-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chọn Con Tim Hay Nghe Lý Trí
+            </span>
+            <span class="list-top-movie-item-en">
+             욕정이이성을앞서는아줌마풀코스
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1732,21 +1732,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thang-gieng-hai-mat" title="Tháng Giêng Hai Mặt">
+          <a class="list-top-movie-link" href="/phim-moi/dolly-parton-tri-an-tu-musicares" title="Dolly Parton: Tri ân từ MusiCares">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thang-gieng-hai-mat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dolly-parton-tri-an-tu-musicares-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tháng Giêng Hai Mặt
+             Dolly Parton: Tri ân từ MusiCares
             </span>
             <span class="list-top-movie-item-en">
-             The Two Faces of January
+             Dolly Parton: A MusiCares Tribute
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1754,21 +1754,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/van-gioi-tien-tung" title="Vạn Giới Tiên Tung">
+          <a class="list-top-movie-link" href="/phim-moi/xi-trum-phan-2" title="Xì Trum (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-gioi-tien-tung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xi-trum-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vạn Giới Tiên Tung
+             Xì Trum (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Vạn Giới Tiên Tung
+             The Smurfs (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
